--- a/frontend/src/assets/css/Perfil.css
+++ b/frontend/src/assets/css/Perfil.css
@@ -1,5 +1,19 @@
+.containerPerfil{
+  width: auto;
+  height: 300px;
+}
+
+
+.formEditado button{
+  width: 150px;
+  height: 33px;
+  background-color: rgba(237, 243, 241, 0.932);
+  margin-top: 15px;
+  font-weight: bold;
+  border-color: rgb(20, 87, 87);
+}
 .table {
-    width: 100%;
+    width: 100%;  
     border-collapse: collapse;
   }
   .table td{
@@ -13,4 +27,90 @@
     background-color: #0a440c83;
     color: white;
     padding: 8px;
+  }
+  
+  .table input{
+    text-align: center;
+    border-color:transparent;
+    font-size: 14px;
+  }
+
+  *, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+ 
+  
+  .bloc-tabs2 {
+    display:inline-block;
+    position:relative;
+  }
+  .tabs2 {
+  
+    padding: 15px;
+    text-align: center;
+    width: 300px;
+    background: rgba(128, 128, 128, 0.075);
+    cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.274);
+    box-sizing: content-box;
+    position: relative;
+    outline: none;
+    font-size: 20px;
+    
+  }
+  .tabs2:not(:last-child){
+    border-right: 1px solid rgba(0, 0, 0, 0.274);
+  }
+  
+  .active-tabs2  {
+    background: rgba(45, 75, 49, 0.5);
+    border-bottom: 1px solid transparent;
+  }
+  
+  .active-tabs2::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% + 2px);
+    height: 5px;
+    background: rgb(11, 32, 20);
+  }
+  
+  
+  
+  button {
+    border: none;
+    
+  }
+  .content-tabs2 {
+    flex-grow : 1;
+  }
+  .content {
+    background: white;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+  .content h2 {
+    padding: 0px 0 5px 0px;
+  }
+  .content hr {
+    width: 100px;
+    height: 2px;
+    background: #222;
+    margin-bottom: 5px;
+  }
+  .content p {
+    width: 100%;
+    height: 100%;
+  }
+  .active-content {
+    display: block;
   }
