--- a/frontend/src/assets/css/Deporte.css
+++ b/frontend/src/assets/css/Deporte.css
@@ -1,3 +1,9 @@
+*, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
 .Deportes-container{
     display: flex;
     flex-wrap: wrap;
@@ -7,8 +13,15 @@
     position: relative;
     bottom:auto; 
     right:auto;
+    width: 50px;
+    height: 20px;
+    margin: 10px;
+    font-size: 10px;
 
   
+}
+.containerCards{
+    size: auto;
 }
 .Titulos{
     font-size: 20px;
@@ -30,3 +43,90 @@
 body{
     font-family:'Roboto';
 }
+
+.containerCards {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: auto;
+    height: auto;
+    background: #819e8173;
+    margin: 10px auto 0;
+    word-break: break-all;
+    border: 1px solid rgba(72, 139, 33, 0.945);
+  }
+  
+  .bloc-tabs {
+    display: flex;
+  }
+  .tabs {
+  
+    padding: 5px;
+    text-align: center;
+    width: 50%;
+    background: rgba(128, 128, 128, 0.075);
+    cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.274);
+    box-sizing: content-box;
+    position: relative;
+    outline: none;
+    font-size: 20px;
+  }
+  .tabs:not(:last-child){
+    border-right: 1px solid rgba(0, 0, 0, 0.274);
+  }
+  
+  .active-tabs  {
+    background: rgba(45, 75, 49, 0.5);
+    border-bottom: 1px solid transparent;
+  }
+  
+  .active-tabs::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% + 2px);
+    height: 3px;
+    background: rgb(11, 32, 20);
+  }
+  
+  
+  
+  button {
+    border: none;
+    
+  }
+  .content-tabs {
+    flex-grow : 1;
+  }
+  .content {
+    background: white;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+  .content h2 {
+    padding: 0px 0 5px 0px;
+  }
+  .content hr {
+    width: 100px;
+    height: 2px;
+    background: #222;
+    margin-bottom: 5px;
+  }
+  .content p {
+    width: 100%;
+    height: 100%;
+  }
+  .active-content {
+    display: block;
+  }
+
+  .SelectColor{
+      width: 50px;
+      height: 20px;
+  }
